deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 3  # Số lượng Pod muốn chạy
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: nguyenminhhieu2k/k8s-app:latest  # Docker image của bạn
        ports:
        - containerPort: 5005  # Cổng mà ứng dụng đang chạy trong container
        imagePullPolicy: Always  # Luôn luôn kéo image mới nhất khi triển khai
